migrate to jdk17, working in new renderer